top donor fix alignment

--- a/src/ui/screens/home/components/topDonor/TopDonor.module.css
+++ b/src/ui/screens/home/components/topDonor/TopDonor.module.css
@@ -54,6 +54,7 @@ svg.down{
 
 .donor_card h4{
     margin-top: 1rem;
+    text-align: center;
 }
 
 .readmore_btn{
